[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/boss_room_entrance/entrance.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.5, 73 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.125, 72.75 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "block_entrance"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -96 ) ]
}

[node name="entrance" type="Node2D"]
script = ExtResource( 1 )

[node name="InviBarrier" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InviBarrier"]
position = Vector2( 63.5, -71 )
shape = SubResource( 4 )

[node name="PlayerTrigger" type="Area2D" parent="."]
position = Vector2( 61, -71 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTrigger"]
position = Vector2( 2.125, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/block_entrance = SubResource( 2 )

[connection signal="body_entered" from="PlayerTrigger" to="." method="_on_PlayerTrigger_body_entered"]
